<resources>
    <string name="app_name">ShoeStore</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_hint">Please enter the email</string>
    <string name="pwd_hint">Please enter the password</string>

    <!-- String related to onboarding -->
    <string name="welcome_header">Welcome!</string>
    <string name="welcome_desc">This is my shoe store app!</string>
    <string name="label_next_button">NEXT</string>
    <string name="instruction_header">Instructions!</string>
    <string name="instruction_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>


    <!-- String related to list of item -->
    <string name="brand_name">Brand Name</string>
    <string name="shoe_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="welcome">"Welcome!"</string>
    <string name="add_shoe">Add new shoe</string>
    <string name="shoe_img_desc">Shoe Image</string>
    <string name="logout">Logout</string>
    <string name="label_brand">Brand</string>
    <string name="label_model">Model</string>
    <string name="label_size">Size</string>
    <string name="label_desc">Desc</string>
    <string name="title_login">Login</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_instruction">Instruction</string>
    <string name="title_shoe_list">Shoe List</string>
    <string name="title_shoe_detail">Shoe Detail</string>

</resources>
