<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="shoesViewModel"
            type="com.udacity.shoestore.models.ShoesViewModel" />
    </data>

    <!--
    If I used Linear Layout in this layout, I would have to create horizontal
    oriented linear layout each textview and edittext groups.
    There would be a complex hierarchy.Constraint Layout is the concept provides simplifies
    design and flattens hierarchy. Each view is defined by associations to other elements in the layout.
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/label_brand"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            />

        <TextView
            android:id="@+id/size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_size"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/model_label"
            />

        <TextView
            android:id="@+id/model_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_model"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_desc"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_label"
            />

        <EditText
            android:id="@+id/et_brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:singleLine="true"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@={shoe.company}"
            />

        <EditText
            android:id="@+id/et_model_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:singleLine="true"
            app:layout_constraintBaseline_toBaselineOf="@+id/model_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@={shoe.name}"
            />

        <EditText
            android:id="@+id/et_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="number"
            android:singleLine="true"
            android:text="@={`` + shoe.size}"
            app:layout_constraintBaseline_toBaselineOf="@+id/size_label"
            app:layout_constraintEnd_toEndOf="parent"
             />

        <EditText
            android:id="@+id/et_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@={shoe.description}" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:padding="16dp"
            android:background="@drawable/button_radius"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_label" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_radius"
            android:padding="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/add_shoe"
            android:onClick="@{() -> shoesViewModel.addShoe(shoe)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
